week6-security/W6D3/yaml/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
  labels:
    app: client
spec:
  containers:
  - name: client
    image: busybox
    command:
      - sleep
      - "3600"
