week6-security/W6D3/yaml/allow-egress-http.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-http
spec:
  podSelector: {}

  policyTypes:
  - Egress

  egress:
  - ports:
    - protocol: TCP
      port: 80
