week6-security/W6D3/yaml/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}

  policyTypes:
  - Ingress
