week6-security/W6D3/yaml/deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress
spec:
  podSelector: {}

  policyTypes:
  - Egress
